--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -257,7 +257,7 @@ margin-right: 5px;
   flex-direction: row;
   justify-content: flex-start;
   flex-wrap: wrap;
-  width: 50%;
+  width: 100%;
 }
 
 .participant{
@@ -268,4 +268,21 @@ margin-right: 5px;
   border-radius: 50%;
   width: 100px;
   height: 100px;
+}
+
+.createPage{
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+  box-shadow: 0px 0px 4px lightgrey;
+  width: 60%;
+  margin: auto;
+  padding: 25px;
+}
+
+.createForm{ 
+  font-size: 150%;
+}
+
+.fileInput{
+  font-size: 75%;
 }
