--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10660,9 +10660,48 @@ a.text-dark:focus {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+@-webkit-keyframes turn {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes turn {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.carouselImg {
+  height: 85vh;
+}
+
 .ofc {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.rotate:hover {
+  -webkit-animation-name: turn;
+          animation-name: turn;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
 }
 
 .container-card {
@@ -10760,6 +10799,7 @@ section .section-title {
   margin-right: auto;
   box-shadow: 0px 0px 4px lightgrey;
   border-radius: 0px 0px 10px 10px;
+  background-color: white;
 }
 
 .box6 {
