--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10198,3 +10198,22 @@ Note: Beware of modifying this element as it can break the animations - you shou
 #footer {
   background-color: black !important;
 }
+
+.carouselMask {
+  position: absolute;
+  top: 0;
+  height: 80vh;
+  width: 100%;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.carousel {
+  overflow: hidden;
+}
+
+.carouselTitle {
+  background-color: rgba(0, 0, 0, 0.3);
+  font-size: 300%;
+  color: white;
+}
