--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9946,9 +9946,16 @@ section .section-title {
 
 .box6 img {
   width: 100%;
-  height: auto;
+  height: 75vh;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
+@media (max-width: 767px) {
+  .box6 img {
+    height: 30vh;
+  }
+}
 .box6:hover img {
   opacity: 0.5;
 }
@@ -10244,5 +10251,5 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 .mapsBtn:hover {
-  text-shadow: 0px 0px 2px #009BFF !important;
+  box-shadow: 0px 0px 4px black !important;
 }
