--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -200,7 +200,15 @@ margin-right: 5px;
 }
 
 .box6 img{
-  width:100%;height:auto
+  width:100%;
+  height: 75vh;
+  object-fit: cover;
+}
+
+@media (max-width:767px){
+  .box6 img{
+    height: 30vh;
+  }
 }
 
 .box6:hover img{
@@ -470,5 +478,5 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 .mapsBtn:hover{
-  text-shadow: 0px 0px 2px #009BFF!important;
+  box-shadow: 0px 0px 4px black!important;
 }
