design + all events page in progress

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9735,10 +9735,6 @@ h3 {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
-.navBar {
-  height: 6vh;
-}
-
 .carouselImg, .carousel {
   height: 60vh;
 }
@@ -9785,6 +9781,10 @@ h3 {
 .container-card {
   width: 90%;
   margin: auto;
+}
+
+.card {
+  border-color: black;
 }
 
 .card:hover {
@@ -10252,4 +10252,22 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 .mapsBtn:hover {
   box-shadow: 0px 0px 4px black !important;
+}
+
+h1 {
+  background-color: white;
+  font-family: "Baloo Chettan", cursive;
+}
+
+body {
+  background-color: white;
+}
+
+.viewMore {
+  font-size: 200%;
+  color: black;
+}
+
+.viewMore:hover {
+  color: black;
 }
