--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,10 +16,6 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
-.navBar{
-  height: 6vh;
-}
-
 .carouselImg,.carousel{
   height: 60vh;
 }
@@ -49,6 +45,10 @@
 .container-card{
   width:90%;
   margin:auto;
+}
+
+.card{
+  border-color: black;
 }
 
 .card:hover{
@@ -479,4 +479,22 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 .mapsBtn:hover{
   box-shadow: 0px 0px 4px black!important;
+}
+
+h1{
+  background-color: white;
+  font-family: 'Baloo Chettan', cursive;
+}
+
+body{
+  background-color: white;
+}
+
+.viewMore{
+  font-size: 200%;
+  color: black;
+}
+
+.viewMore:hover{
+  color: black;
 }
