--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css?family=Baloo+Chettan);@import url(https://fonts.googleapis.com/css?family=Quattrocento+Sans);@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css?family=Baloo+Chettan);@import url(https://fonts.googleapis.com/css?family=Quattrocento+Sans);@import url(https://fonts.googleapis.com/css?family=IBM+Plex+Sans);@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);@charset "UTF-8";
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -10302,16 +10302,19 @@ body {
 .oops {
   font-size: 450%;
   text-align: center;
+  font-family: "IBM Plex Sans", sans-serif;
 }
 
 .error {
   font-size: 600%;
   text-align: center;
+  font-family: "IBM Plex Sans", sans-serif;
 }
 
 .errorText {
-  font-size: 200%;
+  font-size: 300%;
   text-align: center;
+  font-family: "IBM Plex Sans", sans-serif;
 }
 
 .john {
