--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -548,3 +548,27 @@ body{
 .john{
   display:block;
 }
+
+.eventProf{
+  min-height: 50vh;
+}
+
+.eventProf h2{
+  border: solid 1px black;
+  border-radius: 10px;
+  text-align: center;
+  width: 250px;
+  margin-bottom: 5vh;
+  font-family: 'Baloo Chettan', cursive;
+}
+
+.edition{
+  font-size: 20px;
+}
+
+.profileContainer{
+  border: solid 1px lightgrey;
+  box-shadow: 0px 0px 4px lightgrey;
+  border-radius: 10px 10px 10px 10px;
+  margin-bottom: 5vh;
+}
