event page changes

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -572,3 +572,12 @@ body{
   border-radius: 10px 10px 10px 10px;
   margin-bottom: 5vh;
 }
+
+.desc{
+  font-size: 150%;
+}
+
+.eventTime{
+  font-size: 120%;
+  font-weight: bolder;
+}
