--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -49,7 +49,7 @@
 }
 
 .card{
-  border-color: black;
+  border-color: grey;
 }
 
 .card:hover{
@@ -424,8 +424,9 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 .futurEvents{
   height: 10vh;
-  background-color: white;
-  border-top: black 8px solid;
+  background-color: black;
+  color: white;
+  border-top: #FF4A4A 8px solid;
   font-family: 'Baloo Chettan', cursive;
 }
 
@@ -485,10 +486,6 @@ Note: Beware of modifying this element as it can break the animations - you shou
 h1{
   background-color: white;
   font-family: 'Baloo Chettan', cursive;
-}
-
-body{
-  background-color: white;
 }
 
 .viewMore{
@@ -571,6 +568,7 @@ body{
   box-shadow: 0px 0px 4px lightgrey;
   border-radius: 10px 10px 10px 10px;
   margin-bottom: 5vh;
+  background-color: white;
 }
 
 .desc{
